# azure-updates-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FOUNDRY_MCP_ARCHITECTURE.md  README.md  TEST_PROMPTS.md  pyproject.toml  server.json
.claude/agents/: terraform-azure-expert.md
src/azure_updates_mcp/: __main__.py  config.py  server.py
src/azure_updates_mcp/feeds/: azure_rss.py
src/azure_updates_mcp/models/: __init__.py  input_models.py
src/azure_updates_mcp/tools/: categories.py  get_previews.py  get_retirements.py  get_update_details.py  get_updates_by_category.py  get_updates_by_date_range.py  get_updates_summary.py  list_categories.py  list_updates.py  ping.py  search.py  search_updates.py  summarize.py  two_week_summary.py
tests/: test_tools.py
