[project]
name = "azure-updates-mcp"
version = "0.1.0"
description = "MCP server for Azure Updates RSS feed"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "fastmcp>=2.14,<3",
    "httpx>=0.28",
    "feedparser>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
azure-updates-mcp = "azure_updates_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_updates_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
